UX: Ensure sticky elements don't overflow header (#14432)

--- a/app/assets/stylesheets/common/base/compose.scss
+++ b/app/assets/stylesheets/common/base/compose.scss
@@ -517,6 +517,7 @@ body:not(.ios-safari-composer-hacks) {
   #reply-control.open {
     --min-height: 255px;
     min-height: var(--min-height);
+    max-height: calc(100vh - var(--header-offset, 4em));
     &.composer-action-reply {
       // we can let the reply composer get a little shorter
       min-height: calc(var(--min-height) - 4em);
